All Tasks: margins on Tablet View (768px) fixed.

--- a/style.css
+++ b/style.css
@@ -333,6 +333,10 @@ input[type=text]::placeholder {
 
 @media (max-width: 992px) { 
 
+    div.main h2 {
+        font-size: 1.1rem;
+    }
+
     .sidebar p{
         font-size: .7rem;
     }
